--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,7 @@ dist.jar=${dist.dir}/CapaDatosCapNurtac.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jandex-1.1.0.Final.jar=C:\\ProyectosJava\\ModuloCapacitacion (1)\\ModuloCapacitacion (1)\\JarProyects\\jandex-1.1.0.Final.jar
+file.reference.jandex-1.1.0.Final.jar=C:\\ProyectosJava\\ModuloCapacitacion (1)\\JarProyects\\jandex-1.1.0.Final.jar
 includes=**
 jar.compress=true
 javac.classpath=\
